--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <header>
+      <a href="https://hardze.github.io/comp_jgs/"><img src="seta.png" class="voltar"></a>
       <h1>PONG GAME:</h1>
       <h2>Foi um jogo criado para jogar em dupla, nem tente jogá-lo sozinho de forma alguma!</h2>
     </header>
